# AutoMyFeishu

./: .env.example  .gitignore  CLAUDE.md  README.md  README_zh.md  install.sh  launch.sh  manage.sh  pyproject.toml  requirements.txt
claude_feishu_flow/: __init__.py  bot.py  config.py
claude_feishu_flow/ai/: __init__.py  client.py  kimi_client.py  prompt.py  token_tracker.py  tools.py
claude_feishu_flow/feishu/: __init__.py  auth.py  bitable.py  client.py  messaging.py  webhook.py
claude_feishu_flow/runner/: __init__.py  executor.py
claude_feishu_flow/server/: __init__.py  app.py  routes.py  scheduler.py  web.py
claude_feishu_flow/server/templates/: index.html
deploy/: claude-feishu-flow.service
scripts/: test_bitable_api.py  test_claude_api.py  test_encrypt_webhook.py  test_executor.py  test_feishu_api.py
tests/: test_auth_and_client.py  test_bitable.py  test_claude_tools.py  test_executor.py  test_kimi.py  test_messaging.py  test_routes.py  test_webhook.py
